--- a/src/scss/base/_tipografia.scss
+++ b/src/scss/base/_tipografia.scss
@@ -14,6 +14,10 @@ h2 {
 h3 {
     font-size: 3rem;
 }
+h4 {
+    font-size: 2rem;
+    text-align: center;
+}
 .text-center {
     text-align: center;
 }
