--- a/src/scss/ui/social/_sociales.scss
+++ b/src/scss/ui/social/_sociales.scss
@@ -8,6 +8,6 @@
     gap: 2rem;
     margin: 4rem 0;
     @include m.tablet {
-        justify-content: flex-end;
+        justify-content: center;
     }
 }
